# InnovOS

./: .gitignore  AGENTS.md  API_KEY_FIX.md  CLAUDE.md  Makefile  deepseek_ocr_v2.md  deepseek_ocr_v3.md  deepseek_ocr_v5.md  docker-compose.yml  paddleocr_test_result.md  pdfminer_test_result.md  run_tests.sh
backend/: .env  .env.example  Dockerfile  InnovOS_ACCOUNTS.db.migrated  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  main.py  seed.py  utils.py
backend/app/algorithm/: __init__.py  ai_client.py  base.py  crypto.py  file_parser.py  key_manager.py  model_registry.py  model_resolver.py  model_runtime.py  model_service.py  models_crud.py  patent_extractor.py  patent_search.py  providers_registry.py  workflow_state_machine.py  zr_ipm.py
backend/app/algorithm/analyzers/: __init__.py  demand_portrait.py  evolution_analyzer.py  ifr_generator.py  (+6 more)
backend/app/api/: analysis.py  auth.py  evaluation.py  feedback.py  kb_tools.py  keys.py  knowledge.py  knowledge_bases.py  knowledge_bases_v2.py  knowledge_bases_v3.py  modeling.py  models.py  monitor.py  notifications.py  patents.py  principles.py  sidebar.py  solutions.py  tasks.py  users.py  workflow.py
backend/app/data/: triz_constants.py
backend/app/models/: analysis.py  evaluation.py  feedback.py  knowledge.py  patent.py  solution.py  task.py  user.py  workflow.py
backend/app/services/: __init__.py  file_storage_service.py  knowledge_base_service.py  knowledge_item_service.py  knowledge_job_manager.py  knowledge_lock_manager.py  knowledge_orchestration.py  knowledge_orchestration_service.py  knowledge_service.py  knowledge_service_v2.py  knowledge_service_v3.py  knowledge_workflow_service.py  notification_service.py  patent_rag_service.py
backend/app/tables/: __init__.py  analyses.py  api_keys.py  audit_logs.py  evaluations.py  feedbacks.py  knowledge.py  knowledge_bases.py  model_providers.py  models.py  notifications.py  patents.py  pg_schema.py  problem_modelings.py  solutions.py  tasks.py  users.py  workflows.py
backend/scripts/: migrate_data.py  migrate_sqlite_to_pg.py
backend/tests/: conftest.py  test_api_models.py  test_embedder.py  test_knowledge_base_service.py  test_knowledge_item_service.py  test_knowledge_job_manager.py  test_knowledge_jobs.py  test_model_reconcile.py  test_model_registry.py  test_model_runtime.py  test_models_crud.py  test_orchestration_service.py  test_providers_registry.py  test_reranker.py  test_url_scrape.py  test_vector_store.py  xinglugu-summer.md
(+278 files in other folders)
