[project]
name = "innovos-backend"
version = "0.1.0"
description = "InnovOS 创新智能操作系统后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "openai>=2.41.0",
    "psutil>=5.9.0",
    "numpy>=2.2.6",
    "python-multipart>=0.0.32",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"
start = "uvicorn app.main:app"
