[project]
name = "innovos-backend"
version = "0.1.0"
description = "InnovOS 创新智能操作系统后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "openai>=2.41.0",
    "psutil>=5.9.0",
    "numpy>=2.2.6",
    "python-multipart>=0.0.32",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "PyPDF2>=3.0.0",
    "pdfminer.six>=20221105",
    "python-docx>=1.1.0",
    "trafilatura>=2.1.0",
    "readability-lxml>=0.8.0",
    "html2text>=2024.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Prevent Database.get_db() from trying to connect to PostgreSQL during tests
env = [
    "DATABASE_URL=postgresql://test:test@localhost:5432/test",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"
start = "uvicorn app.main:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "PyPDF2>=3.0.0",
    "pdfminer.six>=20221105",
    "python-docx>=1.1.0",
]
